--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,7 @@ jobs:
       - name: Formatting
         run: test -z $(go fmt ./...)
 
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
       - name: Staticcheck (Linting)
-        run: staticcheck ./...
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
