--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Build Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-462913/notely-ar-repo/notely:latest .
+
+      - name: Deploy to Cloud Run
+        run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-462913/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-462913 --max-instances=4
