--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.0"
-
+          
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+        
       - name: Build
         run: scripts/buildprod.sh
 
