--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
           
       - name: Install goose
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
-        
+
       - name: Build
         run: scripts/buildprod.sh
 
@@ -42,7 +42,7 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-462913/notely-ar-repo/notely:latest .
 
       - name: Database Migration
-        run: scripts/migrate.sh
+        run: scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-462913/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-462913 --max-instances=4
